BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_CustomerRetentionNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_CustomerRetentionNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Retention del Cliente</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>