BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_DataAppuntamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAppuntamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data appuntamento</label>
    <type>DateTime</type>
</CustomField>