BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_ElencoSezioniModificate__c.field-meta.xml
<CustomField>
    <fullName>CRM_ElencoSezioniModificate__c</fullName>
    <formula>CRM_ListaSezioniModificate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elenco sezioni modificate</label>
    <type>Text</type>
</CustomField>