BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_EmailConsulenteAssicurativo__c.field-meta.xml
<CustomField>
    <fullName>CRM_EmailConsulenteAssicurativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email - Consulente Assicurativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>