BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_EmailConsulenteLegale__c.field-meta.xml
<CustomField>
    <fullName>CRM_EmailConsulenteLegale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email - Consulente Legale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>