BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_EmailFamilyOffice__c.field-meta.xml
<CustomField>
    <fullName>CRM_EmailFamilyOffice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email - Family Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>