BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_Filiale__c.field-meta.xml
<CustomField>
    <fullName>CRM_Filiale__c</fullName>
    <formula>CRM_Customer__r.PTF_Filiale__r.CRM_Nome__c</formula>
    <label>Nome Filiale</label>
    <type>Text</type>
</CustomField>