BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_FinLastModifiedDateProdScadenzaTerzi__c.field-meta.xml
<CustomField>
    <fullName>CRM_FinLastModifiedDateProdScadenzaTerzi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin - Ultima modifica - prod scad terzi</label>
    <type>DateTime</type>
</CustomField>