BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_FundsExpiringProductsNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_FundsExpiringProductsNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finanz - Prodotti in scadenza note</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>