BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_GestioniDiPTF__c.field-meta.xml
<CustomField>
    <fullName>CRM_GestioniDiPTF__c</fullName>
    <label>Gestioni di Portafoglio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualification</valueSetName>
    </valueSet>
</CustomField>