BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_GlobalAdvisoryNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_GlobalAdvisoryNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Global Advisory</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>