BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_Importo_Banca_8__c.field-meta.xml
<CustomField>
    <fullName>CRM_Importo_Banca_8__c</fullName>
    <label>Importo - Banca 8</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRM_Patrimonio</valueSetName>
    </valueSet>
</CustomField>