BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IncontroCongiuntoText__c.field-meta.xml
<CustomField>
    <fullName>CRM_IncontroCongiuntoText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incontro congiunto - testo</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>