BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InsExpiringProductsNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_InsExpiringProductsNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Prodotti in scadenza presso terzi</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>