BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InsuranceCheckNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_InsuranceCheckNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Tagliando assicurativo</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>