BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InteressatoAltro__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressatoAltro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Interessato ad altro</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>