BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InteressatoClubDeal__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressatoClubDeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interessato al Club Deal</label>
    <type>Checkbox</type>
</CustomField>