BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InteressatoIPO__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressatoIPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interessato ad IPO</label>
    <type>Checkbox</type>
</CustomField>