BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InteresseGlobalAdvisory__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteresseGlobalAdvisory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesse Global Advisory</label>
    <type>Checkbox</type>
</CustomField>