BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InteresseIPONotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteresseIPONotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Interesse IPO</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>