BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InvesteClubDeal__c.field-meta.xml
<CustomField>
    <fullName>CRM_InvesteClubDeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investe in Club Deal</label>
    <type>Checkbox</type>
</CustomField>