BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InvestimentiAlternativi__c.field-meta.xml
<CustomField>
    <fullName>CRM_InvestimentiAlternativi__c</fullName>
    <label>Tipo di investimenti alternativi in PTF</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Private Debt</fullName>
            </value>
            <value>
                <fullName>NPL</fullName>
            </value>
            <value>
                <fullName>Real Estate diretto</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Real Estate fondi</fullName>
            </value>
            <value>
                <fullName>Infrastrutture</fullName>
            </value>
            <value>
                <fullName>Cartolarizzazioni</fullName>
            </value>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Arte</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>