BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_InvestimentiClubDealNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_InvestimentiClubDealNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Investimenti Club Deal</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>