BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsAbilitazioneCongiunto__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsAbilitazioneCongiunto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abilitazione - Incontro congiunto</label>
    <type>Checkbox</type>
</CustomField>