BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsAltriBeni__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsAltriBeni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Altri Beni</label>
    <type>Checkbox</type>
</CustomField>