BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckAltriImpresePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckAltriImpresePop__c</fullName>
    <formula>OR (
				 CRM_V_SpecialistConsultation__c ,
				 CRM_V_BusinessSpecialistConsultation__c ,
				 CRM_V_LongTermRental__c ,
				 CRM_V_WelfareService__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Altri Imprese popolato</label>
    <type>Checkbox</type>
</CustomField>