BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckAssicImpresePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckAssicImpresePop__c</fullName>
    <formula>OR (
				 CRM_V_RameElementare__c ,
				 CRM_V_ProdottiProtezione__c ,
				 CRM_V_AssicurazioniVita__c ,
				 CRM_V_CreditsInsurance__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Assicurativo Imprese popolato</label>
    <type>Checkbox</type>
</CustomField>