BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckAssicurativoPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckAssicurativoPrivatePop__c</fullName>
    <formula>OR (
    CRM_V_InsuranceCheck__c ,
    CRM_V_HomeInsurance__c ,
    CRM_V_HealthInsurance__c ,
    CRM_V_FamilyLifeInsurance__c ,
    CRM_V_LifeInsurance__c ,
    CRM_V_CarInsurance__c ,
    CRM_V_InsExpiringProducts__c,
				CRM_V_VarieAssicurativo__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Assicurativo Private popolato</label>
    <type>Checkbox</type>
</CustomField>