BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckFinanziamentiPersonalPop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckFinanziamentiPersonalPop__c</fullName>
    <formula>OR (
				 CRM_V_Mortgage__c ,
				 CRM_V_Loans__c ,
				 CRM_V_FinancialVarious__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Finanziamenti Personal popolato</label>
    <type>Checkbox</type>
</CustomField>