BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckFinanziarioPersonalPop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckFinanziarioPersonalPop__c</fullName>
    <formula>OR (
				 CRM_V_PerformancePortfolioAnalysis__c ,
				 CRM_V_WalletActivity__c ,
				 CRM_V_RetentionCheck__c ,
				 CRM_V_ExtraordinaryOperations__c ,
				 CRM_V_FinExpiringProducts__c ,
				 CRM_V_SellingProperties__c ,
CRM_V_VarieFinanziario__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Finanziario Personal popolato</label>
    <type>Checkbox</type>
</CustomField>