BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckFinanziarioPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckFinanziarioPrivatePop__c</fullName>
    <formula>OR(
	CRM_V_WalletRiskReturnStatus__c,
	CRM_V_WalletActivity__c,
	CRM_V_RetentionCheck__c,
	CRM_V_ExtraordinaryOperations__c,
	CRM_V_FinExpiringProducts__c,
	CRM_V_SellingProperties__c,
	CRM_V_AltroFinanziario__c,
	CRM_V_ProposteInvestimento__c,
	CRM_V_GestioniDiPTF__c,
	CRM_V_PIR__c,
	CRM_V_Certificate__c,
	CRM_V_AssicurativoVita__c,
	CRM_V_FondiInvestimentoCedolari__c,
	CRM_V_FondiESG__c,
	CRM_V_FondiSicavTradizionali__c,
	CRM_V_OrganizzazionePatrimonio__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Finanziario Private popolato</label>
    <type>Checkbox</type>
</CustomField>