BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckInvestAltPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckInvestAltPrivatePop__c</fullName>
    <formula>OR (
CRM_V_PrivateEquity__c,
CRM_V_RealEstateFondi__c,
CRM_V_VenutreCapital__c,
CRM_V_Infrastrutture__c,
CRM_V_PrivateDebt__c,
CRM_V_Cartolarizzazioni__c,
CRM_V_NPL__c,
CRM_V_Commodity__c,
CRM_V_RealEstateDiretto__c,
CRM_V_Arte__c,
CRM_V_HedgeFund__c,
CRM_V_InteresseClubDeal__c,
CRM_V_InteresseIPO__c,
CRM_V_AcquistoPartAsset__c,
CRM_V_Criptovalute__c,
CRM_V_InvestimentiviaToken__c,
CRM_V_AltroInvesAlternat__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Invest Alter Private popolato</label>
    <type>Checkbox</type>
</CustomField>