BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckOperativitaPersonalPop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckOperativitaPersonalPop__c</fullName>
    <formula>CRM_V_OffertaaDistanza__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Operatività Personal popolato</label>
    <type>Checkbox</type>
</CustomField>