BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckPatrimonioImpresePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckPatrimonioImpresePop__c</fullName>
    <formula>OR (
				 CRM_V_AdministeredSaving__c ,
				 CRM_V_ManagedSaving__c ,
				 CRM_V_OtherBankFundingForms__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Patrimonio Imprese popolato</label>
    <type>Checkbox</type>
</CustomField>