BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckPrevidenzialePrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckPrevidenzialePrivatePop__c</fullName>
    <formula>OR (
				 CRM_V_SocialSecurityCheckup__c ,
				 CRM_V_RetirementFund__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Previdenziale Private popolato</label>
    <type>Checkbox</type>
</CustomField>