BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckTransazionalePersonalPop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckTransazionalePersonalPop__c</fullName>
    <formula>OR (
				 CRM_V_DebitCards__c,
				 CRM_V_CreditCards__c ,
				 CRM_V_SmartWeb__c ,
				 CRM_V_OnlineTrading__c ,
				 CRM_V_TransVarious__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Transazionale Personal popolato</label>
    <type>Checkbox</type>
</CustomField>