BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_isCheckTransazionalePrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_isCheckTransazionalePrivatePop__c</fullName>
    <formula>OR (
				CRM_V_DebitCards__c,
				CRM_V_CreditCards__c ,
				CRM_V_SmartWeb__c ,
				CRM_V_OnlineTrading__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Transazionale Private popolato</label>
    <type>Checkbox</type>
</CustomField>