BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckWealthManagPersonalPop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckWealthManagPersonalPop__c</fullName>
    <formula>OR (
				 CRM_V_SuccessionPlanning__c ,
				 CRM_V_RealEstateConsulting__c ,
				 CRM_V_OtherWMServices__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Wealth Manag Personal popolato</label>
    <type>Checkbox</type>
</CustomField>