BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsCheckWealthManagPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckWealthManagPrivatePop__c</fullName>
    <formula>OR (
CRM_V_AnalisiSuccessoria__c,
CRM_V_AnalisiPatrimonioTerzi__c,
CRM_V_Trust__c,
CRM_V_AttivitaFilantropica__c,
CRM_V_AssetProtection__c,
CRM_V_ArtAdvisory__c,
CRM_V_OttimGestionePartAzionarie__c,
CRM_V_RealEstateAdvEstero__c,
CRM_V_CambioResidenzaFiscale__c,
CRM_V_ConsulAnaliticaProtPianif__c,
CRM_V_AnalisiPatrimonialeImmob__c,
CRM_V_AnalisiOttimizzazPartec__c,
CRM_V_TaxLegalAdv__c,
CRM_V_FiduciaryMandate__c,
CRM_V_ServiziFiduciari__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check WealthManag Private popolato</label>
    <type>Checkbox</type>
</CustomField>