BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsConsulenzaEvolutaPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsConsulenzaEvolutaPrivatePop__c</fullName>
    <formula>OR (
CRM_V_PacchettoConsulenzaEvolutaStd__c ,
CRM_V_PacchettoConsulenzaEvolutaAdv__c ,
CRM_V_IdeeInvestimento__c ,
CRM_V_ConsulenzaPatrimoniale__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Consulenza Evoluta Private popolato</label>
    <type>Checkbox</type>
</CustomField>