BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsFissatoAppuntamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsFissatoAppuntamento__c</fullName>
    <formula>TEXT(CRM_ContactStatus__c) = &apos;Fissato appuntamento&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Fissato appuntamento</label>
    <type>Checkbox</type>
</CustomField>